src/snapshots/treetop_core__engine__tests__evaluate__test_evaluate_requests__bob_view_deny_wrong_photo.snap
---
source: src/engine/tests/evaluate.rs
expression: decision
---
{
  "Deny": {
    "version": {
      "hash": "367a1bf718b961945a55eb68ef47778eab2db0ed787476147c9a77dd83833686",
      "loaded_at": "[timestamp]",
      "label_set": null,
      "generation": 1
    }
  }
}
